crates/compiler/cypress/tests/snapshots/test_parse__highest_int_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "9223372036854775807\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("9223372036854775807")

[=== formatted below ===]

