crates/compiler/cypress/tests/snapshots/test_parse__ident.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: abc
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("abc")

[=== formatted below ===]
abc
